# bcs_agent

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
examples/plugins/clock/: README.md  bcs_plugin_clock.py  pyproject.toml
examples/plugins/google_drive/: README.md  bcs_plugin_google_drive.py  pyproject.toml
examples/plugins/world_clock/: README.md  bcs_plugin_world_clock.py  pyproject.toml
examples/tools/: clock.py  world_clock.py
src/bcs_agent/: __init__.py  __main__.py  agent.py  cli.py  config.py  plugins.py  session.py
tests/: conftest.py  test_agent.py  test_cli.py  test_config.py  test_plugins.py  test_session.py
tools/: README.md
