[project]
name = "bcs-agent"
version = "0.1.0"
description = "A simple, model- and provider-agnostic conversational AI agent harness built on Pydantic AI."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic-ai-slim[xai]>=1.97.0",
]

[project.scripts]
bcs-agent = "bcs_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bcs_agent"]

[tool.uv.workspace]
members = ["/examples/plugins/*"]


[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=bcs_agent --cov-report=term-missing"

[tool.coverage.run]
# Pure entry-point shim (python -m bcs_agent); no logic to cover.
omit = ["*/__main__.py"]

[tool.coverage.report]
exclude_also = ['if __name__ == "__main__":']
