[project]
name = "bcs-plugin-clock"
version = "0.1.0"
description = "Example bcs-agent plugin: a clock."
requires-python = ">=3.10"
dependencies = ["pydantic-ai-slim>=1.97.0"]

# This is what makes the plugin discoverable. Once the package is installed,
# the harness finds `get_toolset` by reading this metadata -- no file paths.
[project.entry-points."bcs_agent.plugins"]
clock = "bcs_plugin_clock:get_toolset"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["bcs_plugin_clock.py"]
