[project]
name = "bcs-plugin-google-drive"
version = "0.1.0"
description = "Example bcs-agent plugin: current date and time by location."
requires-python = ">=3.10"
dependencies = [
    "langchain-google-community[drive]>=4.0.0",
    "langchain-googledrive>=0.3.35",
    "pydantic-ai-slim>=1.97.0",
    "unstructured>=0.18.32",
]

[project.entry-points."bcs_agent.plugins"]
google_drive = "bcs_plugin_google_drive:get_toolset"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["bcs_plugin_google_drive.py"]
