[project]
name = "bcs-plugin-world-clock"
version = "0.1.0"
description = "Example bcs-agent plugin: current date and time by location."
requires-python = ">=3.10"
dependencies = ["pydantic-ai-slim>=1.97.0"]

[project.entry-points."bcs_agent.plugins"]
world_clock = "bcs_plugin_world_clock:get_toolset"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["bcs_plugin_world_clock.py"]
